--- a/package.json
+++ b/package.json
@@ -6,12 +6,32 @@
   "repository": "git@github.com:pansyjs/react-image.git",
   "author": "wangxingkang <wang_xingakang@qq.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "dumi dev",
+    "build": "dumi build",
+    "build:lib": "father-build",
+    "release": "walrus release"
+  },
+  "peerDependencies": {
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
+  },
   "devDependencies": {
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "father-doc": "^1.0.0-alpha.18",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "typescript": "^3.7.5"
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@walrus/cli": "^1.3.0",
+    "@walrus/plugin-release": "^1.8.0",
+    "dumi": "^1.0.21",
+    "father-build": "^1.18.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "typescript": "^3.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=10.9.0",
+    "yarn": ">=1.3.2"
   }
 }
